[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'gl2f-local-extension'
license = { text = 'PolyForm-Noncommercial-1.0.0' }
dynamic = ['version']
dependencies = []
requires-python = '>=3.8'

[tool.setuptools]
packages = ['gl2f_local_extension']

[tool.setuptools.dynamic]
version = {attr = 'gl2f_local_extension.__version__.version'}

[tool.setuptools_scm]
write_to = 'gl2f_local_extension/__version__.py'

[project.urls]
'Homepage' = 'https://github.com/trnciii/gl2f-local-extension'
